--- a/.github/config.yml
+++ b/.github/config.yml
@@ -4,6 +4,7 @@
 # Can be either a string :
 requestInfoReplyComment: >
   We would appreciate it if you could provide us with more info about this issue/pr!
+  test message
 
 # Or an array:
 # requestInfoReplyComment:
